docs/api/qiskit/0.24/qiskit.optimization.converters.InequalityToEquality.md
---
title: InequalityToEquality
description: API reference for qiskit.optimization.converters.InequalityToEquality
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.optimization.converters.InequalityToEquality
---

<span id="qiskit-optimization-converters-inequalitytoequality" />

# qiskit.optimization.converters.InequalityToEquality

<span id="qiskit.optimization.converters.InequalityToEquality" />

`InequalityToEquality(mode='auto')` [GitHub](https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/optimization/converters/inequality_to_equality.py "view source code")

Convert inequality constraints into equality constraints by introducing slack variables.

**Examples**

```python
>>> from qiskit.optimization.problems import QuadraticProgram
>>> from qiskit.optimization.converters import InequalityToEquality
>>> problem = QuadraticProgram()
>>> # define a problem
>>> conv = InequalityToEquality()
>>> problem2 = conv.convert(problem)
```

**Parameters**

**mode** (`str`) –

To chose the type of slack variables. There are 3 options for mode.

*   ’integer’: All slack variables will be integer variables.

*   ’continuous’: All slack variables will be continuous variables

*   **’auto’: Try to use integer variables but if it’s not possible,**

    use continuous variables

### \_\_init\_\_

<span id="qiskit.optimization.converters.InequalityToEquality.__init__" />

`__init__(mode='auto')`

**Parameters**

**mode** (`str`) –

To chose the type of slack variables. There are 3 options for mode.

*   ’integer’: All slack variables will be integer variables.

*   ’continuous’: All slack variables will be continuous variables

*   **’auto’: Try to use integer variables but if it’s not possible,**

    use continuous variables

## Methods

|                                                                                                                                                       |                                                                                                                |
| ----------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------------------- |
| [`__init__`](#qiskit.optimization.converters.InequalityToEquality.__init__ "qiskit.optimization.converters.InequalityToEquality.__init__")(\[mode])   | **type mode**`str`                                                                                             |
| [`convert`](#qiskit.optimization.converters.InequalityToEquality.convert "qiskit.optimization.converters.InequalityToEquality.convert")(problem)      | Convert a problem with inequality constraints into one with only equality constraints.                         |
| [`decode`](#qiskit.optimization.converters.InequalityToEquality.decode "qiskit.optimization.converters.InequalityToEquality.decode")(result)          | DEPRECATED Decode a result into another form using the information of conversion.                              |
| [`encode`](#qiskit.optimization.converters.InequalityToEquality.encode "qiskit.optimization.converters.InequalityToEquality.encode")(problem)         | DEPRECATED Encode a QuadraticProgram into another form and keep the information required to decode the result. |
| [`interpret`](#qiskit.optimization.converters.InequalityToEquality.interpret "qiskit.optimization.converters.InequalityToEquality.interpret")(result) | Convert a result of a converted problem into that of the original problem.                                     |

## Attributes

|                                                                                                                                |                                   |
| ------------------------------------------------------------------------------------------------------------------------------ | --------------------------------- |
| [`mode`](#qiskit.optimization.converters.InequalityToEquality.mode "qiskit.optimization.converters.InequalityToEquality.mode") | Returns the mode of the converter |

### convert

<span id="qiskit.optimization.converters.InequalityToEquality.convert" />

`convert(problem)`

Convert a problem with inequality constraints into one with only equality constraints.

**Parameters**

**problem** (`QuadraticProgram`) – The problem to be solved, that may contain inequality constraints.

**Return type**

`QuadraticProgram`

**Returns**

The converted problem, that contain only equality constraints.

**Raises**

*   [**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – If a variable type is not supported.
*   [**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – If an unsupported mode is selected.
*   [**QiskitOptimizationError**](qiskit.optimization.QiskitOptimizationError "qiskit.optimization.QiskitOptimizationError") – If an unsupported sense is specified.

### decode

<span id="qiskit.optimization.converters.InequalityToEquality.decode" />

`decode(result)`

DEPRECATED Decode a result into another form using the information of conversion.

**Return type**

`OptimizationResult`

### encode

<span id="qiskit.optimization.converters.InequalityToEquality.encode" />

`encode(problem)`

DEPRECATED Encode a QuadraticProgram into another form and keep the information required to decode the result.

**Return type**

`QuadraticProgram`

### interpret

<span id="qiskit.optimization.converters.InequalityToEquality.interpret" />

`interpret(result)`

Convert a result of a converted problem into that of the original problem.

**Parameters**

**result** (`OptimizationResult`) – The result of the converted problem or the given result in case of FAILURE.

**Return type**

`OptimizationResult`

**Returns**

The result of the original problem.

### mode

<span id="qiskit.optimization.converters.InequalityToEquality.mode" />

`property mode`

Returns the mode of the converter

**Return type**

`str`

**Returns**

The mode of the converter used for additional slack variables

